finished week 4 authentication. Added users collection and sign in with Github.
